--- a/_quarto.yml
+++ b/_quarto.yml
@@ -17,7 +17,7 @@ website:
       - text: "Home"
         file: index.qmd
       - text: "Papers"
-        url: "papers.pdf"
+        url: "docs/papers.pdf"
   page-footer:
     left: "© Copyright 2022 Jaume Amores."
 format:
